@@ -25,6 +25,8 @@
       - fix when only one var is specified
     o getNLinesYGgplot -> getNLinesSubjectProfile
     o getXLimSubjectProfilePlots -> getTimeLimSubjectProfilePlots
+    o subjectProfileCombine:
+        + attribute nLinesPlot -> metaData$nLines for consistency with subject plot fct
 1.4.3
     o change default palette for Windows support: u25C0 -> u25C4, u25B6 -> u25BA, u271A -> +, u2605 (star) -> u2666 (diamond), u25EF -> u25CB
 1.4.2
